2017-12-28  Keith Marshall  <keith@users.osdn.me>

	Fix a build issue, assembling generic SX files.

	* Makefile.in (%_generic.sx): Always use $(COMPILE.sx) to pre-process
	and assemble these; with $(CC) -c $(ALL_CPPFLAGS) $(ASFLAGS), versions
	of GCC, prior to GCC-4.3, will fail to identify the source file suffix
	correctly, resulting in failure to assemble the code.

2017-12-18  Keith Marshall  <keith@users.osdn.me>

	Support strtok() re-entrancy, per request [#2342].

	* mingwex/strtok_r.c: New file; it implements...
	(strtok_r): ...this function, per POSIX.1-1995 specification.
	* Makefile.in (libmingwex.a): Add reference; make it depend on...
	(strtok_r.$OBJEXT): ...this.

	* include/string.h: Declare corresponding runtime API.
	[_POSIX_C_SOURCE >= 199506L] (strtok_r): Add function prototype.
	[__MSVCRT_VERSION__ >= __MSVCR80_DLL] (strtok_s): Likewise; this is
	the Microsoft equivalent function, first introduced in this non-free
	MSVC runtime library; subsequently available in MSVCRT.DLL since...
	[_WIN32_WINNT >= _WIN32_WINNT_VISTA]: ...this release, likewise.

2017-12-16  Keith Marshall  <keith@users.osdn.me>

	Implement autotest module for POSIX clock API functions.

	* tests/clockapi.at: New file.
	* tests/testsuite.at.in (clockapi.at): Incorporate it.

2017-12-15  Keith Marshall  <keith@users.osdn.me>

	Implement a subset of the POSIX.1b-1993 clock API.

	* include/time.h [_POSIX_C_SOURCE >= 199309L]
	(clockid_t): New structured data type; define it opaquely, and...
	(CLOCK_REALTIME, CLOCK_MONOTONIC): ...declare these extern instances.
	(clock_getres, clock_gettime, clock_settime): New functions; declare
	prototypes.

	* mingwex/clockapi.h mingwex/clockapi.c mingwex/clockres.c
	* mingwex/clockset.c mingwex/clocktime.c: New files; they implement
	the preceding clock instances, and associated API functions.

	* include/sys/time.h [_POSIX_C_SOURCE >= 200809L] (gettimeofday):
	Mark it as "deprecated".

2017-12-14  Keith Marshall  <keith@users.osdn.me>
